# anilang

./: Cargo.toml  README.md  sert_eq!(
.github/: cleanup_bench.py  format_bench.py
.github/workflows/: benchmarks.yml  rust.yml
core/: Cargo.toml
core/benches/: anilang.rs
core/src/: bytecode.rs  colour.rs  diagnostics.rs  lexer.rs  lib.rs  parser.rs  scope.rs  serialize.rs  source_text.rs  test_helpers.rs  text_span.rs  types.rs
core/src/bytecode/: mod.rs  print_bytecode.rs  tests.rs
core/src/evaluator/: mod.rs  scope.rs  tests.rs
core/src/lexer/: mod.rs  tests.rs
core/src/lowerer/: const_evaluator.rs  mod.rs  no_optimize_tests.rs  optimize_tests.rs
core/src/parser/: mod.rs  tests.rs
core/src/source_text/: mod.rs  tests.rs  text.rs
core/src/syntax_node/: assignment_node.rs  binary_node.rs  block_node.rs  break_node.rs  declaration_node.rs  fn_call_node.rs  fn_declaration_node.rs  if_node.rs  index_node.rs  interface_node.rs  list_node.rs  literal_node.rs  loop_node.rs  mod.rs  object_node.rs  return_node.rs  unary_node.rs  variable_node.rs
core/src/tokens/: mod.rs  tests.rs  token_kind.rs
core/src/types/: mod.rs  tests.rs
core/src/value/: cmp_impl.rs  fmt_impl.rs  from.rs  from_impl.rs  function.rs  mod.rs  read_impl.rs  serialize.rs  tests.rs
core/src/value/function/: anilang_fn.rs  mod.rs  native_fn.rs
core/src/value/indexing/: access_property.rs  mod.rs  tests.rs
core/tests/: algebra.rs  functions.rs  interface.rs  lists.rs  objects.rs  strings.rs  unicode.rs  variables.rs
core/tests/common/: mod.rs
crates/anilang/: Cargo.toml
crates/anilang/src/: compiler.rs  lib.rs  repl.rs  runtime.rs  stdlib.rs  syntax.rs
crates/anilang/src/repl/: get_indent.rs  linter.rs
crates/anilang/tests/: conditionals.rs  functions.rs  lists.rs  strings.rs  variables.rs
crates/anilang/tests/common/: mod.rs
crates/diagnostics/: Cargo.toml
crates/evaluator/: Cargo.toml
crates/gc/: Cargo.toml
crates/intermediaries/: Cargo.toml
crates/lexer/: Cargo.toml
crates/lowerer/: Cargo.toml
crates/lowerer/src/: const_evaluator.rs  lib.rs
crates/lowerer/tests/: no_optimize.rs  optimize.rs
crates/parser/: Cargo.toml
crates/serialize/: Cargo.toml
crates/source/: Cargo.toml
crates/vm/: Cargo.toml
docs/: expressions.md  syntax.md  values.md
src/: colour.rs  compiler.rs  diagnostics.rs  error.rs  get_indent.rs  lexer.rs  lib.rs  linter.rs  main.rs  parser.rs  repl.rs  runtime.rs  source_text.rs  stdlib.rs  syntax.rs  text_span.rs  types.rs  value.rs
src/evaluator/: mod.rs  scope.rs
src/repl/: get_indent.rs  history.rs  linter.rs  macros.rs  mod.rs  should_execute.rs
src/syntax_node/: assignment_node.rs  binary_node.rs  block_node.rs  break_node.rs  declaration_node.rs  if_node.rs  literal_node.rs  (+4 more)
(+65 files in other folders)
