[package]
name = "anilang"
version = "0.1.0"
authors = ["Lutetium-Vanadium <luv.s7000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs2 = "2.3"
shelp = "0.1.1"
anilang-core = { path="core" }
crossterm = "0.18.2"
