[workspace]
members = [
    "crates/anilang",
    "crates/diagnostics",
    "crates/evaluator",
    "crates/gc",
    "crates/intermediaries",
    "crates/lexer",
    "crates/lowerer",
    "crates/parser",
    "crates/serialize",
    "crates/source",
    "crates/vm",
]

default-members = [ "crates/anilang" ]
