[package]
name = "anilang-core"
version = "0.1.0"
authors = ["Lutetium-Vanadium <luv.s7000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anilang"

[dependencies]
crossterm = "0.18.2"
enumflags2 = "0.6.4"
