[package]
name = "anilang-core"
version = "0.1.0"
authors = ["Lutetium-Vanadium"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anilang"

[[bench]]
name = "anilang"
harness = false

[dependencies]
crossterm = "0.18.2"
enumflags2 = "0.6.4"

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"
